@@ -3,6 +3,7 @@
 	Avoid using inet_makeaddr because it breaks on IRIX (Pavel Cahyna)
 	Check if -D_SGI_SOURCE is needed on IRIX
 	Document ABI problems on IRIX (Pavel Cahyna)
+	Remove reload by SIGHUP in rc-debian.sh (Pavel Cahyna)
 2.0:
 2.0rc5:
 	Fix suffix match for the domain clause (Martin Paul)
